# Desktop-Env

./: .emacs  .fvwm95rc  .gitignore  LICENSE  README.md  Xresources  gitconfig  notes.md  powerline.sh  pro.gitconfig  pyenv.sh  xinitrc  zlogin  zlogout  zshenv  zshrc  zshrc.ohmyzsh
dev/perl/Module-Starter-CH/: .gitignore  Build.PL  Changes  MANIFEST  MYMETA.json  Makefile.PL  README
emacs/: .cvsignore  TODO.txt  adapt.el  cms-pset-mode.el  cmt-mode.el  colored-faces.el  count-words-buffer.el  cust-autoinsert.el  cust-c-mode.el  cust-calendar.el  cust-cc-extra-faces.el  cust-cc-faces.el  cust-cc-mode-faces.el  cust-cc-mode-funcs.el  cust-cc-mode.el  cust-emacs-lisp-mode.el  cust-f77-mode.el  cust-faces.el  cust-java-mode.el  cust-latex-mode.el  cust-makefile-mode.el  cust-misc-mode.el  cust-orcarc-mode.el  cust-perl-mode.el  cust-php-mode.el  cust-python-mode.el  cust-ruby-mode.el  cust-sgml-mode.el  cust-shell-mode.el  cust-text-mode.el  date.el  defaults-env.el  extra-cc-faces.el  flash-paren.el  functions-env.el  gnuserv.1  gnuserv.el  goto-percent.el  gst-mode.el  hm--date.el  (+24 more)
emacs/auctex/: tex.el
emacs/auctex/style/: alltt.elc  alphanum.elc  (+81 more)
emacs/carbon-font/: carbon-font.elc
emacs/elisp/: ExampleDotEmacs.el  batch-library.el  dot-emacs.ashby  dot-emacs.old  elisp-practice-old.el  elisp-practice-old2.el  elisp-practice-old3.el  elisp-practice.el  elisp-practice.el~  emacs.mac  test-dot-emacs.el
emacs/insert/: Makefile.in  configure.in  html-insert.html  uil-insert.uil
iterm2/: Profiles.json
templates/GNU/: Makefile.in
templates/Ruby/: Gemfile
templates/Virt/: Dockerfile  Vagrantfile
zshfunctions/: README  _castor  _cmsRun  _project  _scram  _subversion
(+3 files in other folders)
