dnl Process this file with autoconf to produce a configure script
dnl ----------------------------------------------------------------------
dnl 
dnl (C) 1995 Lassi A. Tuura (<Lassi.Tuura@hut.fi>)
dnl ----------------------------------------------------------------------

AC_REVISION($Revision: 1.1 $)dnl

AC_INIT(src/file.cc)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADER(include/config.h)
AC_PREFIX_DEFAULT(/afs/cern.ch/user/l/lat/src/)
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
dnl AC_PROG_LEX
dnl AC_PROG_LN_S
AC_PROG_RANLIB
dnl AC_PROG_YACC

AC_FUNC_STRFTIME

AC_HEADER_STDC

dnl AC_CONFIG_SUBDIRS()
AC_OUTPUT(Makefile src/Makefile test/Makefile)
