dnl ____________________________________________________________________
dnl  File: Makefile.in
dnl ____________________________________________________________________
dnl
dnl  Author: Shaun Ashby <shaun@ashby.ch>
dnl  Update: 2013-06-13 10:00:34+0200
dnl  Revision: $Id$
dnl
dnl  Copyright: 2013 (C) Shaun Ashby
dnl
dnl --------------------------------------------------------------------
dnl Process this file with autoconf to produce a configure script
dnl --------------------------------------------------------------------
AC_REVISION($Revision: 0.1 $)dnl

AC_INIT(src/file.cc)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADER(include/config.h)
dnl AC_PREFIX_DEFAULT(/somepath)
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
dnl AC_PROG_LEX
dnl AC_PROG_LN_S
AC_PROG_RANLIB
dnl AC_PROG_YACC

AC_FUNC_STRFTIME

AC_HEADER_STDC

dnl AC_CONFIG_SUBDIRS()
AC_OUTPUT(Makefile src/Makefile test/Makefile)
